--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -14,10 +14,14 @@
             <div class="container">
                 <a class="navbar-brand" href="#">Instagram Clone</a>
                 <div class="d-flex ms-auto">
+                    <!-- Botón Registro -->
+                    <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#registerModal" id="boton_registro">Registro</button>
                     <!-- Botón Login -->
-                    <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+                    <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#loginModal" id="boton_login">Login</button>                   
                     <!-- Botón Cargar Imagen -->
-                    <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#uploadModal">Cargar Imagen</button>
+                    <button class="btn btn-outline-success me-2" data-bs-toggle="modal" data-bs-target="#uploadModal" id="boton_cargar_imagen">Cargar Imagen</button>
+                     <!-- Botón Logout -->
+                     <button class="btn btn-outline-danger me-2" data-bs-toggle="modal" data-bs-target="#logoutModal" id="boton_logout">Logout</button>
                 </div>
             </div>
         </nav>
